Closed Bug 246392 Opened 22 years ago Closed 22 years ago

Reloading a page containing frames goes back to top level

Categories

(Core Graveyard :: Embedding: GTK Widget, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: crispin, Assigned: crispin)

References

()

Details

(Keywords: fixed-aviary1.0, fixed1.7.5)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a2) Gecko/20040611 Galeon/1.3.15.99 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a2) Gecko/20040611 Galeon/1.3.15.99 If you load a site containing frames, and click a link which changes the content of one of the frames, pressing reload takes you back to the top of the site Reproducible: Always Steps to Reproduce: 1. Start TestGtkEmbed 2. Open the testcase 3. Click on a the link to navigate into the site 4. Click on reload Actual Results: The toplevel page in the main frame is reloaded rather than the page opened after clicking on the link Expected Results: The page that you navigated to should be displayed, just like in mozilla-the-browser Originally reported as bug http://bugzilla.gnome.org/show_bug.cgi?id=66998
Attached patch Proposed patchSplinter Review
mozilla-the-browser uses the SessionHistory to perform the reload, rather than the webnavigation, see http://lxr.mozilla.org/seamonkey/source/xpfe/browser/resources/content/browser.js#60 This patch mimics that code for the embedding widget
Attachment #150594 - Flags: review?(blizzard)
Attachment #150594 - Flags: review?(blizzard) → review+
Attachment #150594 - Flags: superreview?(bryner)
Comment on attachment 150594 [details] [diff] [review] Proposed patch sr=shaver
Attachment #150594 - Flags: superreview?(bryner) → superreview+
Comment on attachment 150594 [details] [diff] [review] Proposed patch It would be great if this could also get into the 1.7 branch. It only affects the gtk embedding component, so is low risk, and is highly visible for users of the widget (such as galeon and epiphany)
Attachment #150594 - Flags: approval1.7.3?
Comment on attachment 150594 [details] [diff] [review] Proposed patch a=mkaply for 1.7.3
Attachment #150594 - Flags: approval1.7.3? → approval1.7.3+
This is the patch for the 1.7 branch, with the spacing corrected.
This bug is getting the approval1.7.3+ flag without being confirmed??? Why still UNCONFIRMED?
Mainly because I have always been led to believe its not good form to confirm my own bug, and no one else has been bothered....
(In reply to comment #7) > Mainly because I have always been led to believe its not good form to confirm my > own bug, and no one else has been bothered.... Well, blizzard or shaver could do it as they super/reviewed your patch. Or do it yourself so we can see your bug when querying the database without UNCONFIRMED being selected.
Assignee: blizzard → crispin
Status: UNCONFIRMED → NEW
Ever confirmed: true
Status: NEW → ASSIGNED
Thanks very much to timeless for checking this patch in, it is in both the 1.7 branch and trunk.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Keywords: fixed1.7.3
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: