Bug 246392 Reloading a page containing frames goes back to top level patch by crispin@flowerday.cx r=blizzard sr=shaver