embedding/browser/gtk/src/gtkmozembed2.cpp
@@ -1150,8 +1150,7 @@ gtk_moz_embed_reload(GtkMozEmbed *embed, gint32 flags)
     break;
   }
 
-  if (embedPrivate->mNavigation)
-    embedPrivate->mNavigation->Reload(reloadFlags);
+  embedPrivate->Reload(reloadFlags);
 }
 
 void
